# workflow-orchestrator

./: .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yaml
src/orchestrator/: __init__.py  celery_app.py  config.py  main.py
src/orchestrator/api/: health.py  metrics.py  tasks.py
src/orchestrator/api/webhooks/: slack.py
src/orchestrator/config/: __init__.py  bots.py  settings.py
src/orchestrator/middleware/: __init__.py  error_handler.py
src/orchestrator/models/: bot.py  slack.py
src/orchestrator/services/: claude.py  claude_parser.py  slack.py  slack_client.py  ssh_executor.py
src/orchestrator/tasks/: __init__.py  base.py  sample.py  slack.py
src/orchestrator/utils/: logging.py  rate_limit.py
tests/: conftest.py  test_health.py  test_tasks.py  test_webhooks.py
